Solucionado conexión a BD

--- a/web/index.html
+++ b/web/index.html
@@ -58,10 +58,13 @@
     						</ul>
 	                        
 	                </ul>
-	                <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">&#xE5D2;</i></a>
+	                <a href="#" data-activates="slide-out" class=
+                           "button-collapse"><i class="material-icons">&#xE5D2;</i></a>
 	                <!Navegador superior>
 	                <div class="nav-wrapper">
-	                        <a href="#" class="brand-logo center"><span class="kindergarten-header" > Amiguitos del saber</span></a>
+	                        <a href="#" class="brand-logo center"><span 
+                                        class="kindergarten-header" > Amiguitos 
+                                        del saber</span></a>
 	                </div>
                 </div>
             </nav>
@@ -76,8 +79,15 @@
 			</div>
 		  	<div class="section white">
     			<div class="row container">
-      				<h1 class="kindergarten-titulo" style="font-style: schoolbellregular" >¿Quienes somos?</h1>
-      				<p class="grey-text text-darken-3 lighten-3">Somos un centro de atención infantil, capacitado para cuidar y educar a los niños, donde los padres pueden sentirse con confianza de dejar a sus niños a manos de expertos, entre los cuales se encuentran licenciados y psicólogos.</p>
+      				<h1 class="kindergarten-titulo" style="font-style:
+                                    schoolbellregular" >¿Quienes somos?</h1>
+      				<p class="grey-text text-darken-3 lighten-3">
+                                    Somos un centro de atención infantil, 
+                                    capacitado para cuidar y educar a los niños,
+                                    donde los padres pueden sentirse con confianza
+                                    de dejar a sus niños en manos de expertos,
+                                    entre los cuales se encuentran licenciados y
+                                    psicólogos.</p>
     			</div>
 	    	</div>
 
@@ -95,7 +105,16 @@
 			<div class="section white">
     			<div class="row container">
       				<h1 class="kindergarten-titulo">Misión</h1>
-      				<p class="grey-text text-darken-3 lighten-3">Amiguitos del saber busca ofrecer a las personas un lugar donde sus hijos puedan estar al cuidado de profesionales y tengan un excelente lugar en donde crecer, gracias a que Amiguitos del saber, además de inculcar el conocimiento para un buen crecimiento personal e intelectual, ofrece servicios básicos como lo son alimentación, apoyo psicológico, transporte, entre otros.</p>
+      				<p class="grey-text text-darken-3 lighten-3">
+                                    Amiguitos del saber busca ofrecer a las 
+                                    personas un lugar donde sus hijos puedan 
+                                    estar al cuidado de profesionales y tengan 
+                                    un excelente lugar en donde crecer, gracias 
+                                    a que Amiguitos del saber, además de inculcar
+                                    el conocimiento para un buen crecimiento 
+                                    personal e intelectual, ofrece servicios 
+                                    básicos como lo son alimentación, apoyo 
+                                    psicológico, transporte, entre otros.</p>
     			</div>
 	    	</div>
 	    	<div class="parallax-container">
@@ -106,7 +125,13 @@
 			<div class="section white">
     			<div class="row container">
       				<h1 class="kindergarten-titulo">Visión</h1>
-                                <p class="grey-text text-darken-3 lighten-3">Para el año 2019 buscamos ser la primera opción en el área metropolitana de Medellín para que los padres puedan encargar el cuidado de sus hijos, ya que Amiguitos del saber ofrece excelentes servicios a manos de profesionales para el bienestar de los niños.</p>
+                                <p class="grey-text text-darken-3 lighten-3">Para
+                                    el año 2019 buscamos ser la primera opción en
+                                    el área metropolitana de Medellín para que los
+                                    padres puedan encargar el cuidado de sus hijos,
+                                    ya que Amiguitos del saber ofrece excelentes 
+                                    servicios en manos de profesionales para el 
+                                    bienestar de los niños.</p>
     			</div>
 	    	</div>
         </main>
